[TASK] backend implementation for the user logic - initial
