# backend/routes/user_routes.py
@@ -1,8 +1,10 @@
 from flask import Blueprint, request, jsonify
 from flasgger import swag_from
+from database import db_session
+from services.user_service import UserService
 
 user_bp = Blueprint('user_bp', __name__, url_prefix='/api/user')
-
+user_service = UserService(db_session)
 
 @user_bp.route('', methods=['POST'])
 @swag_from('..\\swagger\\api_docs.yaml', methods=['POST'])
@@ -11,7 +13,8 @@ def create_user():
     data = request.get_json()
     if not data:
         return jsonify({"error": "Missing JSON body"}), 400
-    return jsonify({"message": "Not implemented yet"}), 501
+    user = user_service.createUser(data)
+    return jsonify({"id": user.id, "username": user.username}), 201
 
 
 @user_bp.route('', methods=['GET'])
@@ -19,7 +22,10 @@ def create_user():
 def get_user_by_id():
     """Get User By Id"""
     user_id = request.args.get('user_id')
-    return jsonify({"message": "Not implemented yet"}), 501
+    user = user_service.getUser(user_id)
+    if not user:
+        return jsonify({"error": "User not found"}), 404
+    return jsonify({"id": user.id, "username": user.username}), 200
 
 
 @user_bp.route('', methods=['PUT'])
@@ -27,9 +33,13 @@ def get_user_by_id():
 def update_user():
     """Update User"""
     data = request.get_json()
-    if not data:
-        return jsonify({"error": "Missing JSON body"}), 400
-    return jsonify({"message": "Not implemented yet"}), 501
+    user_id = data.get("id")
+    if not user_id:
+        return jsonify({"error": "Missing user id"}), 400
+    updated = user_service.updateUser(user_id, data)
+    if not updated:
+        return jsonify({"error": "User not found"}), 404
+    return jsonify({"message": "User updated"}), 200
 
 
 @user_bp.route('', methods=['DELETE'])
@@ -37,14 +47,18 @@ def update_user():
 def delete_user():
     """Delete User"""
     user_id = request.args.get('user_id')
-    return jsonify({"message": "Not implemented yet"}), 501
+    success = user_service.deleteUser(user_id)
+    if not success:
+        return jsonify({"error": "User not found"}), 404
+    return jsonify({"message": "User deleted"}), 200
 
 
 @user_bp.route('/all', methods=['GET'])
 @swag_from('..\\swagger\\api_docs.yaml', methods=['GET'])
 def get_all_users():
     """Get All Users"""
-    return jsonify({"message": "Not implemented yet"}), 501
+    users = user_service.getAllUsers()
+    return jsonify([{"id": u.id, "username": u.username} for u in users]),200
 
 
 @user_bp.route('/achievements', methods=['GET'])
